src/tests/fixtures/comments/commentFollowsDecorator.invalid.ts.expected
-----------------
INPUT
----------------- 
@ObjectType()
/** @gqlType */
export default class Composer {
  @Field()
  /** @gqlField */
  url(): string {
    return `/composer/`;
  }
}

-----------------
OUTPUT
-----------------
src/tests/fixtures/comments/commentFollowsDecorator.invalid.ts:2:5 - error: Unexpected Grats tag in detached docblock. Grats was unable to determine which TypeScript declaration this docblock is associated with. Moving the docblock to a position with is unambiguously "above" the relevant declaration may help. For more information see: https://grats.capt.dev/docs/faq/comment-syntax

2 /** @gqlType */
      ~~~~~~~~
src/tests/fixtures/comments/commentFollowsDecorator.invalid.ts:5:7 - error: Unexpected Grats tag in detached docblock. Grats was unable to determine which TypeScript declaration this docblock is associated with. Moving the docblock to a position with is unambiguously "above" the relevant declaration may help. For more information see: https://grats.capt.dev/docs/faq/comment-syntax

5   /** @gqlField */
        ~~~~~~~~~
